# RenderToy

./: .gitignore  .gitmodules  CMakeLists.txt  DrawingLib.vcxproj  DrawingLib.vcxproj.filters  DrawingNet.vcxproj  DrawingWPF.csproj  DrawingWin32.vcxproj  LICENSE.txt  README.md  RenderToy.sln  RenderToyUWP.sln  build.bat  build.sh  main_dc_text.cpp
Buildme/: Buildme.cpp  Buildme.vcxproj
Configuration/: Common.cplusplus.props  Common.cplusplus.targets  Common.csharp.props  Cuda.cplusplus.props  Cuda.cplusplus.targets  LibPNG.cplusplus.props  OpenVR.cplusplus.props  OpenVR.cplusplus.targets  OpenVR.csharp.props  Vulkan.cplusplus.props
Data/: VulkanFragment.spv  VulkanShader.frag  VulkanShader.vert  VulkanVertex.spv
RenderToyCLI/: .gitignore  InteropCommon.h  InteropDXGI.cpp  InteropDirect3D11.cpp  InteropDirect3D12.cpp  InteropDirect3DCompiler.cpp  README.txt  Raytrace.cu  Raytrace.h  Raytrace.inc  RaytraceExportCPU.cpp  RaytraceExportCPU.h  RaytraceExportCUDA.cpp  RaytraceExportCUDA.h  RenderToyCLI.cpp  RenderToyCLI.vcxproj  RenderToyCLI.vcxproj.filters  RenderToyD3D12.cpp
RenderToyCOM/: RenderToy.idl  RenderToyCOM.vcxproj
RenderToyCPP/: Raytrace.h  Raytrace.inc  RaytraceCPU.cpp  RaytraceCUDA.cu  RenderToy.cpp  RenderToy.h  RenderToyCLI.vcxproj  RenderToyCPP.vcxproj  RenderToyCUDA.cpp  RenderToyCUDA.cu  RenderToyD3D9.cpp
RenderToyCS/: RenderToyCS.csproj
RenderToyCSU/: RenderToyCSU.csproj
RenderToyCX/: README.txt  RenderToyCX.vcxproj
RenderToyCoreCPP/: AMPArrayView.cpp  AMPArrayView.h  AMPArrayViewWrap.cpp  AMPArrayViewWrap.h  InteropCommon.h  InteropDXGI.cpp  InteropDirect3D11.cpp  InteropDirect3D12.cpp  InteropDirect3D9.cpp  InteropDirect3DCompiler.cpp  InteropLibPNG.cpp  InteropOpenVR.cpp  Raytrace.cpp  Raytrace.cu  Raytrace.h  Raytrace.inc  RaytraceExportAMP.cpp  RaytraceExportAMP.h  RaytraceExportCPU.cpp  RaytraceExportCPU.h  RaytraceExportCUDA.cpp  RaytraceExportCUDA.h  RenderToyCLI.cpp  RenderToyCX.cpp  RenderToyD3D9.cpp
RenderToyCoreCS/: RenderToyCoreCS.projitems  (+1 more)
(+697 files in other folders)
